[package]
name = "temples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ureq = { version = "2", features = ["json"] }
headless_chrome = "0.9"
env_logger = "0.9"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["local-offset", "serde-well-known", "macros"] }
bincode = "1.3"
xlsxwriter = "0.3.5"
